Here's the commented version of the code:

```c++
// Copyright 2023 gRPC authors.

// Include necessary headers
#include <grpcpp/grpcpp.h>

#include <condition_variable>
#include <iostream>
#include <memory>
#include <mutex>
#include <string>
#include <vector>

// Include Abseil libraries for flags and logging
#include "absl/flags/flag.h"
#include "absl/flags/parse.h"
#include "absl/log/initialize.h"
#include "absl/strings/str_cat.h"

// Include the generated gRPC protobuf headers
#ifdef BAZEL_BUILD
#include "examples/protos/helloworld.grpc.pb.h"
#else
#include "helloworld.grpc.pb.h"
#endif

// Define a command line flag for server address with default value "localhost:50051"
ABSL_FLAG(std::string, target, "localhost:50051", "Server address");

// Using declarations for gRPC and protobuf types
using grpc::Channel;
using grpc::ClientContext;
using grpc::Status;
using grpc::StatusCode;
using helloworld::Greeter;
using helloworld::HelloReply;
using helloworld::HelloRequest;

// Client class for bidirectional streaming RPC
class KeyValueStoreClient
    : public grpc::ClientBidiReactor<HelloRequest, HelloReply> {
 public:
  // Constructor: initializes the stub and starts the RPC stream
  KeyValueStoreClient(std::shared_ptr<Channel> channel)
      : stub_(Greeter::NewStub(channel)) {
    // Start the bidirectional stream
    stub_->async()->SayHelloBidiStream(&context_, this);
    // Set initial request message
    request_.set_name("Begin");
    // Start the first write operation
    StartWrite(&request_);
    // Start the RPC call
    StartCall();
  }

  // Callback when a read operation completes
  void OnReadDone(bool ok) override {
    if (ok) {
      // Print the response from server
      std::cout << request_.name() << " : " << response_.message() << std::endl;
      // If we haven't reached the count limit, send another request
      if (++counter_ < 10) {
        request_.set_name(absl::StrCat("Count ", counter_));
        StartWrite(&request_);
      } else {
        // After 10 messages, cancel the RPC
        context_.TryCancel();
      }
    }
  }

  // Callback when a write operation completes
  void OnWriteDone(bool ok) override {
    if (ok) {
      // After writing, start reading the response
      StartRead(&response_);
    }
  }

  // Callback when the RPC completes
  void OnDone(const grpc::Status& status) override {
    if (!status.ok()) {
      // Handle RPC completion status
      if (status.error_code() == StatusCode::CANCELLED) {
        std::cout << "RPC Cancelled!" << std::endl;
      } else {
        std::cout << "RPC Failed: " << status.error_code() << ": "
                  << status.error_message() << std::endl;
      }
    }
    // Notify waiting threads that RPC is done
    std::unique_lock<std::mutex> l(mu_);
    done_ = true;
    cv_.notify_all();
  }

  // Wait for the RPC to complete
  void Await() {
    std::unique_lock<std::mutex> l(mu_);
    while (!done_) {
      cv_.wait(l);
    }
  }

 private:
  std::unique_ptr<Greeter::Stub> stub_;  // gRPC stub for making RPC calls
  size_t counter_ = 0;                   // Counter for tracking message count
  ClientContext context_;                // RPC context
  bool done_ = false;                    // Flag indicating RPC completion
  HelloRequest request_;                 // Outgoing request message
  HelloReply response_;                  // Incoming response message
  std::mutex mu_;                        // Mutex for thread synchronization
  std::condition_variable cv_;           // Condition variable for waiting
};

int main(int argc, char** argv) {
  // Initialize command line parsing and logging
  absl::ParseCommandLine(argc, argv);
  absl::InitializeLog();

  // Get server address from command line flags
  std::string target_str = absl::GetFlag(FLAGS_target);
  // Create and start the client
  KeyValueStoreClient client(
      grpc::CreateChannel(target_str, grpc::InsecureChannelCredentials()));
  // Wait for the RPC to complete
  client.Await();
  return 0;
}
```

The comments explain:
1. The overall purpose of each section and component
2. The flow of the bidirectional RPC communication
3. The purpose of each callback method
4. The synchronization mechanism for waiting on RPC completion
5. The command line flag handling
6. The message counting and cancellation logic

The comments are designed to help future developers understand:
- The high-level architecture of the client
- The sequence of operations in the RPC flow
- The error handling and completion logic
- The thread synchronization approach
- The purpose of each class member