Here's the commented version of the code:

```c++
# Copyright 2019 The gRPC Authors

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""The Python example of utilizing Channelz feature."""

# Import future features to ensure compatibility with Python 2 and 3
from __future__ import absolute_import
from __future__ import division
from __future__ import print_function

import argparse
from concurrent import futures
import logging
import random

import grpc

# Import generated gRPC protobuf definitions for the helloworld service
helloworld_pb2, helloworld_pb2_grpc = grpc.protos_and_services(
    "helloworld.proto"
)

# TODO: Suppress until the macOS segfault fix rolled out
from grpc_channelz.v1 import channelz  # Channelz monitoring service

# Set up logging configuration
_LOGGER = logging.getLogger(__name__)
_LOGGER.setLevel(logging.INFO)

# Default failure rate for fault injection (30%)
_RANDOM_FAILURE_RATE = 0.3

class FaultInjectGreeter(helloworld_pb2_grpc.GreeterServicer):
    """Greeter service implementation with random failure injection."""
    
    def __init__(self, failure_rate):
        """Initialize with a configurable failure rate.
        
        Args:
            failure_rate: Float between 0 and 1 representing probability of failure
        """
        self._failure_rate = failure_rate

    def SayHello(self, request, context):
        """Implementation of SayHello RPC with random failure injection.
        
        Args:
            request: HelloRequest containing the name to greet
            context: gRPC context for RPC handling
            
        Returns:
            HelloReply with greeting message if successful
            
        Raises:
            grpc.RpcError: With UNAVAILABLE status if random failure is triggered
        """
        if random.random() < self._failure_rate:
            context.abort(
                grpc.StatusCode.UNAVAILABLE, "Randomly injected failure."
            )
        return helloworld_pb2.HelloReply(message="Hello, %s!" % request.name)

def create_server(addr, failure_rate):
    """Create and configure a gRPC server with Channelz monitoring and fault injection.
    
    Args:
        addr: String representing server address to bind to
        failure_rate: Float between 0 and 1 for failure injection probability
        
    Returns:
        Configured gRPC server instance
    """
    # Create server with thread pool executor
    server = grpc.server(futures.ThreadPoolExecutor())
    
    # Add the fault-injecting Greeter service to the server
    helloworld_pb2_grpc.add_GreeterServicer_to_server(
        FaultInjectGreeter(failure_rate), server
    )

    # Enable Channelz monitoring on the server
    channelz.add_channelz_servicer(server)

    # Configure server to listen on the specified address
    server.add_insecure_port(addr)
    return server

def main():
    """Main function to parse arguments and start the server."""
    # Set up argument parser with server configuration options
    parser = argparse.ArgumentParser()
    parser.add_argument(
        "--addr",
        nargs=1,
        type=str,
        default="[::]:50051",
        help="the address to listen on",
    )
    parser.add_argument(
        "--failure_rate",
        nargs=1,
        type=float,
        default=0.3,
        help="a float indicates the percentage of failed message injections",
    )
    args = parser.parse_args()

    # Create and start the server
    server = create_server(addr=args.addr, failure_rate=args.failure_rate)
    server.start()
    server.wait_for_termination()

if __name__ == "__main__":
    # Configure basic logging and start the application
    logging.basicConfig(level=logging.INFO)
    main()
```

Key improvements made:
1. Added detailed docstrings for all functions and classes
2. Added comments explaining important sections of code
3. Documented parameters and return values
4. Explained the purpose of imports and constants
5. Added comments about the fault injection mechanism
6. Documented the Channelz integration
7. Explained the overall program flow in the main() function

The comments now provide comprehensive documentation while maintaining readability and focusing on the most important aspects of the code.