Here's the commented version of the code:

```c++
// Copyright 2023 gRPC authors.

// Include necessary gRPC headers
#include <grpcpp/ext/proto_server_reflection_plugin.h>
#include <grpcpp/grpcpp.h>
#include <grpcpp/health_check_service_interface.h>

// Standard C++ headers
#include <iostream>
#include <memory>
#include <string>
#include <unordered_set>

// Abseil headers for flags, logging, and string formatting
#include "absl/flags/flag.h"
#include "absl/flags/parse.h"
#include "absl/log/initialize.h"
#include "absl/strings/str_format.h"
#include "absl/synchronization/mutex.h"

// Include the generated protobuf headers
// Different paths for Bazel vs non-Bazel builds
#ifdef BAZEL_BUILD
#include "examples/protos/helloworld.grpc.pb.h"
#else
#include "helloworld.grpc.pb.h"
#endif

// Define a command line flag for server port with default value 50051
ABSL_FLAG(uint16_t, port, 50051, "Server port for the service");

// Using declarations for gRPC and protobuf types
using grpc::CallbackServerContext;
using grpc::Server;
using grpc::ServerBuilder;
using grpc::ServerUnaryReactor;
using grpc::Status;
using grpc::StatusCode;
using helloworld::Greeter;
using helloworld::HelloReply;
using helloworld::HelloRequest;

// Implementation of the Greeter service
class GreeterServiceImpl final : public Greeter::CallbackService {
  // Callback method for handling SayHello RPC
  ServerUnaryReactor* SayHello(CallbackServerContext* context,
                               const HelloRequest* request,
                               HelloReply* reply) override {
    // Get the default reactor for this RPC
    ServerUnaryReactor* reactor = context->DefaultReactor();
    Status status;

    // Validate the request: name must be 1-10 characters
    if (request->name().empty() || request->name().length() > 10) {
      // Return INVALID_ARGUMENT status if validation fails
      status = Status(StatusCode::INVALID_ARGUMENT,
                      "Length of `Name` should be between 1 and 10");
    } else {
      // Set the reply message if validation passes
      reply->set_message(absl::StrFormat("Hello %s", request->name()));
      status = Status::OK;
    }
    // Finish the RPC with the determined status
    reactor->Finish(status);
    return reactor;
  }

 private:
  // Mutex for thread safety (currently unused in this implementation)
  absl::Mutex mu_;
  // Set to track unique request names (currently unused in this implementation)
  std::unordered_set<std::string> request_name_set_;
};

// Function to start and run the gRPC server
void RunServer(uint16_t port) {
  // Create server address string
  std::string server_address = absl::StrFormat("0.0.0.0:%d", port);
  GreeterServiceImpl service;

  // Enable default health check service
  grpc::EnableDefaultHealthCheckService(true);
  // Initialize server reflection plugin
  grpc::reflection::InitProtoReflectionServerBuilderPlugin();
  
  // Create server builder
  ServerBuilder builder;
  
  // Add listening port with insecure credentials (no encryption)
  builder.AddListeningPort(server_address, grpc::InsecureServerCredentials());
  
  // Register our service implementation
  builder.RegisterService(&service);

  // Build and start the server
  std::unique_ptr<Server> server(builder.BuildAndStart());
  std::cout << "Server listening on " << server_address << std::endl;

  // Wait for the server to shutdown (blocking call)
  server->Wait();
}

// Main entry point
int main(int argc, char** argv) {
  // Parse command line flags
  absl::ParseCommandLine(argc, argv);
  // Initialize Abseil logging
  absl::InitializeLog();
  // Run the server with the specified port (from flags)
  RunServer(absl::GetFlag(FLAGS_port));
  return 0;
}
```

Key improvements in the comments:
1. Added file-level comment about the copyright
2. Grouped and explained the include sections
3. Explained the purpose of the ABSL_FLAG macro
4. Documented the service implementation class and its methods
5. Explained the server setup process in RunServer()
6. Added comments about currently unused private members
7. Documented the main() function flow
8. Added comments about important gRPC operations
9. Explained the validation logic in SayHello()
10. Noted the use of insecure credentials (for development only)

The comments provide a clear understanding of the code's structure and functionality while pointing out areas that might need future attention (like the unused members and insecure credentials).