Here's the commented version of the code:

```c++
// Copyright 2023 gRPC authors.

// Include necessary gRPC and other library headers
#include <grpcpp/grpcpp.h>
#include <grpcpp/health_check_service_interface.h>

#include <iostream>
#include <memory>
#include <string>
#include <unordered_set>

// Include Abseil libraries for flags, logging, and string formatting
#include "absl/flags/flag.h"
#include "absl/flags/parse.h"
#include "absl/log/initialize.h"
#include "absl/strings/str_format.h"
#include "absl/synchronization/mutex.h"

// Include the generated protobuf headers
#ifdef BAZEL_BUILD
#include "examples/protos/helloworld.grpc.pb.h"
#else
#include "helloworld.grpc.pb.h"
#endif

// Define a command line flag for the server port with default value 50051
ABSL_FLAG(uint16_t, port, 50051, "Server port for the service");

// Using declarations for gRPC and protobuf types
using grpc::ByteBuffer;
using grpc::CallbackGenericService;
using grpc::CallbackServerContext;
using grpc::GenericCallbackServerContext;
using grpc::ProtoBufferReader;
using grpc::ProtoBufferWriter;
using grpc::Server;
using grpc::ServerBuilder;
using grpc::ServerGenericBidiReactor;
using grpc::Status;
using grpc::StatusCode;
using helloworld::HelloReply;
using helloworld::HelloRequest;

// Implementation of the Greeter service
class GreeterServiceImpl final : public CallbackGenericService {
  // Creates an appropriate reactor based on the requested method
  ServerGenericBidiReactor* CreateReactor(
      GenericCallbackServerContext* context) override {
    if (context->method() == "/helloworld.Greeter/SayHello") {
      // For SayHello method, create a SayHelloReactor
      return new SayHelloReactor();
    } else {
      // For other methods, use default reactor
      return CallbackGenericService::CreateReactor(context);
    }
  }

  // Reactor class for handling SayHello requests
  class SayHelloReactor : public ServerGenericBidiReactor {
   public:
    SayHelloReactor() { 
      // Start reading the incoming request
      StartRead(&request_); 
    }

   private:
    // Handles the SayHello request logic
    Status OnSayHello(const HelloRequest& request, HelloReply* reply) {
      // Validate the request
      if (request.name() == "") {
        return Status(StatusCode::INVALID_ARGUMENT, "name is not specified");
      }
      // Set the response message
      reply->set_message(absl::StrFormat("Hello %s", request.name()));
      return Status::OK;
    }

    // Clean up when done
    void OnDone() override { delete this; }

    // Called when a read operation completes
    void OnReadDone(bool ok) override {
      if (!ok) {
        return;
      }
      Status result;

      // Deserialize the request
      HelloRequest request;
      result = grpc::GenericDeserialize<ProtoBufferReader, HelloRequest>(
          &request_, &request);
      if (!result.ok()) {
        Finish(result);
        return;
      }

      // Process the request
      HelloReply reply;
      result = OnSayHello(request, &reply);
      if (!result.ok()) {
        Finish(result);
        return;
      }

      // Serialize the response
      bool own_buffer;
      result = grpc::GenericSerialize<ProtoBufferWriter, HelloReply>(
          reply, &response_, &own_buffer);
      if (!result.ok()) {
        Finish(result);
        return;
      }
      // Start writing the response
      StartWrite(&response_);
    }

    // Called when a write operation completes
    void OnWriteDone(bool ok) override {
      Finish(ok ? Status::OK
                : Status(StatusCode::UNKNOWN, "Unexpected failure"));
    }

    // Buffers for request and response
    ByteBuffer request_;
    ByteBuffer response_;
  };

 private:
  // Mutex for thread safety
  absl::Mutex mu_;
};

// Starts the gRPC server on the specified port
void RunServer(uint16_t port) {
  // Create server address string
  std::string server_address = absl::StrFormat("0.0.0.0:%d", port);
  GreeterServiceImpl service;
  
  // Enable health check service
  grpc::EnableDefaultHealthCheckService(true);
  
  // Configure and start the server
  ServerBuilder builder;
  builder.AddListeningPort(server_address, grpc::InsecureServerCredentials());
  builder.RegisterCallbackGenericService(&service);

  std::unique_ptr<Server> server(builder.BuildAndStart());
  std::cout << "Server listening on " << server_address << std::endl;

  // Wait for server shutdown
  server->Wait();
}

// Main entry point
int main(int argc, char** argv) {
  // Initialize command line parsing and logging
  absl::ParseCommandLine(argc, argv);
  absl::InitializeLog();
  
  // Run the server with the specified port
  RunServer(absl::GetFlag(FLAGS_port));
  return 0;
}
```

The comments explain:
1. Header inclusions and their purposes
2. Command line flag definition
3. Class responsibilities and relationships
4. Key method functionalities
5. Request/response flow
6. Error handling
7. Resource management
8. Main execution flow

The comments are designed to help future developers understand both the high-level architecture and the detailed implementation choices.