Here's the commented version of the code:

```c++
/*
 * Copyright 2024 gRPC authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Include necessary gRPC headers
#include <grpcpp/ext/proto_server_reflection_plugin.h>
#include <grpcpp/grpcpp.h>
#include <grpcpp/health_check_service_interface.h>

// Standard C++ headers
#include <iostream>
#include <memory>
#include <string>

// Abseil headers for command line parsing and logging
#include "absl/flags/parse.h"
#include "absl/log/initialize.h"

// Include the generated protobuf headers
#ifdef BAZEL_BUILD
#include "examples/protos/helloworld.grpc.pb.h"
#else
#include "helloworld.grpc.pb.h"
#endif

// Using declarations for gRPC and protobuf namespaces
using grpc::Server;
using grpc::ServerBuilder;
using grpc::ServerContext;
using grpc::Status;
using grpc::StatusCode;
using helloworld::Greeter;
using helloworld::HelloReply;
using helloworld::HelloRequest;

// Implementation of the Greeter service
class GreeterServiceImpl final : public Greeter::Service {
 public:
  // Implementation of the SayHello RPC method
  Status SayHello(ServerContext* context, const HelloRequest* request,
                  HelloReply* reply) override {
    // Implement a simple rate limiting mechanism:
    // Only respond successfully every request_modulo_ requests
    if (++request_counter_ % request_modulo_ != 0) {
      std::cout << "return UNAVAILABLE" << std::endl;
      return Status(StatusCode::UNAVAILABLE, "");
    }
    
    // Create a response message by combining a prefix with the client's name
    std::string prefix("Hello ");
    reply->set_message(prefix + request->name());
    std::cout << "return OK" << std::endl;
    return Status::OK;
  }

 private:
  // Configuration for the rate limiting - respond to 1 out of every 4 requests
  static constexpr int request_modulo_ = 4;
  // Counter to track the number of requests received
  int request_counter_ = 0;
};

// Function to start and run the gRPC server
void RunServer(uint16_t port) {
  // Create server address string
  std::string server_address = absl::StrFormat("0.0.0.0:%d", port);
  GreeterServiceImpl service;

  // Enable default health check service
  grpc::EnableDefaultHealthCheckService(true);
  // Initialize server reflection plugin
  grpc::reflection::InitProtoReflectionServerBuilderPlugin();
  
  // Create and configure server builder
  ServerBuilder builder;
  // Add listening port with insecure credentials (for development only)
  builder.AddListeningPort(server_address, grpc::InsecureServerCredentials());
  // Register our service implementation
  builder.RegisterService(&service);

  // Build and start the server
  std::unique_ptr<Server> server(builder.BuildAndStart());
  std::cout << "Server listening on " << server_address << std::endl;

  // Wait for the server to shutdown (blocking call)
  server->Wait();
}

// Main entry point
int main(int argc, char** argv) {
  // Initialize command line parsing and logging
  absl::ParseCommandLine(argc, argv);
  absl::InitializeLog();
  
  // Run the server on port 50052
  RunServer(50052);
  return 0;
}
```

Key improvements in the comments:
1. Added explanations for each major section of code
2. Explained the purpose of the rate-limiting mechanism in SayHello
3. Documented the configuration values and their purpose
4. Added comments for the server setup and initialization process
5. Explained the main function flow
6. Added context for why certain headers are included

The comments now provide a clear understanding of:
- The overall structure of the gRPC server
- The specific implementation details of the service
- The configuration choices made
- The flow of execution through the program